Localization for awspec servertests

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -347,7 +347,9 @@ en:
       add:       'Add Servertest'
       create:    'Create Servertest'
       run:       'Run Servertests'
-      generator: 'Servertest Generator'
+      serverspec_generator: 'Servertest Generator'
+      awspec_generator:      'AWSpec Generator'
+      generate:   'Generate'
     msg:
       created:   'Servertest was successfully created.'
       updated:   'Servertest was successfully updated.'
@@ -357,10 +359,13 @@ en:
       pending:   'Serverspec for %{physical_id} is successfully finished. Pending specs: %{pending_specs}'
       failure:   'Serverspec for %{physical_id} has failed. failure specs: %{failure_specs}'
       generated: 'Serverspec is successfully generated.'
-      delete_serverspec: 'Are you sure you want to delete this Servertest?'
+      delete_servertest: 'Are you sure you want to delete this Servertest?'
       empty-results: 'No results found.'
       auto_generated_enabled_html:  '<small>This Serverspec was created automatically by "<em>serverspec-handler</em>" cookbook.</small>'
       auto_generated_disabled_html: '<small>This option is available only when runlist includes "<em>serverspec-handler</em>" cookbook.</small>'
+      generated:  'Generated file'
+      generating:  'Generating file spec ...'
+      select_infra: 'Select Infrastructure'
     generator:
       title:         'Serverspec Generator'
       name:          'name'
