--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -328,8 +328,8 @@ ja:
 
   servertests:
     name:              'Servertest 名'
-    serverspecs:       'Serverspecs'
-    serverspec:        'Serverspec'
+    servertests:       'Servertests'
+    servertest:        'Servertest'
     description:       '詳細'
     value:             '内容'
     auto_generated:    '自動生成された Serverspec'
@@ -345,20 +345,25 @@ ja:
       add:       'Servertest の追加'
       create:    'Serverspec の作成'
       run:       'Serverspec の実行'
-      generator: 'Serverspec ジェネレータ'
+      serverspec_generator: 'Serverspec ジェネレータ'
+      awspec_generator:      'AWSpec ジェネレータ'
+      generate:    'ジェネレータ'
     msg:
-      created:   'Serverspec が正常に追加されました'
-      updated:   'Serverspec が正常に更新されました'
-      deleted:   'Serverspec が正常に削除されました'
+      created:   'Servertest が正常に追加されました'
+      updated:   'Servertest が正常に更新されました'
+      deleted:   'Servertest が正常に削除されました'
       parseerr:  '入力された Serverspec に間違いがあります'
       success:   '%{physical_id} の Serverspec が正常に終了しました'
       pending:   '%{physical_id} の Serverspec が正常に終了しました。ただし Pending なスペックがあります。 %{pending_specs}'
       failure:   '%{physical_id} の Serverspec が失敗しました。 失敗したスペック: %{failure_specs}'
       generated: 'Serverspec は正常に作成されました。'
       empty-results: '結果が見つかりませんでした。'
-      delete_serverspec: 'この Serverspec を削除してもよろしいですか？'
+      delete_servertest: 'この Servertest を削除してもよろしいですか？'
       auto_generated_enabled_html:  '<small>この Serverspec は Cookbook "<em>serverspec-handler</em>" により自動生成されます</small>'
       auto_generated_disabled_html: '<small>このオプションは Cookbook "<em>serverspec-handler</em>" が Runlist に含まれている場合に使用できます</small>'
+      generated:  '生成されたファイル'
+      generating:  'ファイル仕様の生成 ...'
+      select_infra: 'インフラストラクチャの選択'
     generator:
       title:         'Serverspec ジェネレータ'
       name:          '名前'
