Add log notification after yum update execution is success..

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -305,6 +305,9 @@ ja:
       runlist_empty:      'Runlist は空です'
       dish_applied:       'Dish が適用されました'
       stopped:            'インスタンスが停止しています。ブートストラップを可能にするには、インスタンスを起動してください。'
+      yum_update_success: |
+          %{physical_id}のYumアップデートが成功しました。 <br>
+          この操作のログを表示しますか？
 
 
   dishes:
