iCalendar implementation, config files and methods on both backend and frontend

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -211,6 +211,7 @@ en:
       invalid_keypair:             'Invalid key pair! Please check the keypair file.'
       modifying:                   'Modifying instance.. updates in 15 seconds.'
       change_scale_warning:        'The instance will be stopped temporarily if the scale changes.'
+      save_file:                   'Do you want to download this file?'
 
   security_groups:
     title:        'Security Groups'
@@ -258,6 +259,7 @@ en:
     btn:
       view_sched: 'View Schedule'
       manage_sched: 'Manage Schedule'
+      icalendar:    'iCalendar'
     desc:
       everyday: 'Everyday'
       weekdays: 'Weekdays (Monday - Friday)'
