Status messaging for iCalendar empty message for unassigned schedule per instance

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -275,6 +275,7 @@ en:
       sunday: 'Sunday'
     msg:
       saved: 'Operation Schedule successfully saved.'
+      empty: 'Schedule is not yet set. Please assign schedule fist before rendering iCalendar.'
 
   nodes:
     bootstrap:   'Bootstrap'
