--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -269,6 +269,7 @@ ja:
       sunday: '日曜日'
     msg:
       saved: '運転スケジュールは正常に保存。'
+      empty: 'スケジュールはまだ設定されていません。 iCalendarをレンダリングする前にスケジュールの拳を割り当ててください。'
 
 
   nodes:
