Add translations to stack informations tab

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -176,6 +176,9 @@ en:
     add_ec2:            'Add EC2'
     serverspec_failed:  'Serverspec failed'
     search:             'Search by Keyword ...'
+    operations:         'Operations'
+    monitoring:         'Monitoring'
+    logs:               'Logs'
     btn:
       delete_stack:         'Delete Stack'
       delete_stack_confirm: 'Execute'
