--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -175,6 +175,9 @@ ja:
     add_ec2:            'EC2の追加'
     serverspec_failed:  'Serverspec が失敗しています'
     search:             'キーワードで検索...'
+    operations:         'オペレーション'
+    monitoring:         'モニタリング'
+    logs:               'ログ'
     btn:
       delete_stack:         'スタックの削除'
       delete_stack_confirm: '実行'
@@ -324,10 +327,10 @@ ja:
       empty-list:             'ディッシュのリストが空です'
 
 
-  serverspecs:
-    name:              'Serverspec 名'
-    serverspecs:       'Serverspecs'
-    serverspec:        'Serverspec'
+  servertests:
+    name:              'Servertest 名'
+    servertests:       'Servertests'
+    servertest:        'Servertest'
     description:       '詳細'
     value:             '内容'
     auto_generated:    '自動生成された Serverspec'
@@ -338,24 +341,30 @@ ja:
     created_at:        'at'
     run:               'Serverspec の実行'
     results:           'Serverspec の結果'
+    category:          'カテゴリー'
     btn:
-      add:       'Serverspec の追加'
+      add:       'Servertest の追加'
       create:    'Serverspec の作成'
       run:       'Serverspec の実行'
-      generator: 'ジェネレータ'
+      serverspec_generator: 'Serverspec ジェネレータ'
+      awspec_generator:      'AWSpec ジェネレータ'
+      generate:    'ジェネレータ'
     msg:
-      created:   'Serverspec が正常に追加されました'
-      updated:   'Serverspec が正常に更新されました'
-      deleted:   'Serverspec が正常に削除されました'
+      created:   'Servertest が正常に追加されました'
+      updated:   'Servertest が正常に更新されました'
+      deleted:   'Servertest が正常に削除されました'
       parseerr:  '入力された Serverspec に間違いがあります'
       success:   '%{physical_id} の Serverspec が正常に終了しました'
       pending:   '%{physical_id} の Serverspec が正常に終了しました。ただし Pending なスペックがあります。 %{pending_specs}'
       failure:   '%{physical_id} の Serverspec が失敗しました。 失敗したスペック: %{failure_specs}'
       generated: 'Serverspec は正常に作成されました。'
       empty-results: '結果が見つかりませんでした。'
-      delete_serverspec: 'この Serverspec を削除してもよろしいですか？'
+      delete_servertest: 'この Servertest を削除してもよろしいですか？'
       auto_generated_enabled_html:  '<small>この Serverspec は Cookbook "<em>serverspec-handler</em>" により自動生成されます</small>'
       auto_generated_disabled_html: '<small>このオプションは Cookbook "<em>serverspec-handler</em>" が Runlist に含まれている場合に使用できます</small>'
+      generated:  '生成されたファイル'
+      generating:  'ファイル仕様の生成 ...'
+      select_infra: 'インフラストラクチャの選択'
     generator:
       title:         'Serverspec ジェネレータ'
       name:          '名前'
