Add input forms for vpc_id and subnet_id

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -78,6 +78,8 @@ en:
     access_key:        'Access Key ID'
     secret_access_key: 'Secret Access Key'
     chef_server:       'Chef Server'
+    vpc_id:            'VPC ID'
+    subnet_id:         'Subnet ID'
 
     msg:
       created:           'SkyHopper was successfully setup'
