--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -265,7 +265,7 @@ ja:
       sunday: '日曜日'
     msg:
       saved: '運転スケジュールは正常に保存。'
-      empty: 'スケジュールはまだ設定されていません。 iCalendarをレンダリングする前にスケジュールの拳を割り当ててください。'
+      empty: 'スケジュールはまだ設定されていません。スケジュールを取得する前にまずスケジュールを割り当ててください。'
 
 
   nodes:
