--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -266,6 +266,8 @@ ja:
     msg:
       saved: '運転スケジュールは正常に保存。'
       empty: 'スケジュールはまだ設定されていません。スケジュールを取得する前にまずスケジュールを割り当ててください。'
+      warn:  '注意'
+      select_day: '下記のチェックボックスから日を選択してください。 続ける前に'
 
 
   nodes:
