--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -460,6 +460,7 @@ en:
     register_host:        'Register infrastructure with Zabbix Server'
     before_reg_title:     'Please select template before proceeding.'
     zabbix_templates:     'Zabbix Templates'
+    click_to_select:      'Click to select this Zabbix Server'
     btn:
       create: 'Register'
       add:    'Add'
@@ -484,6 +485,7 @@ en:
       not_running:             'Zabbix Server is not running.'
       not_set:                 ': was not selected in zabbix Templates. Please select template in the configuration tab.'
       trigger_setting_warning: 'Threshold will be updated only if you have selected items.'
+      change_zabbix:            'Are you sure you want to change the Zabbix Server for this Infrastructure?'
       page:                    'Page'
       of:                      'of'
       no_data: |
