--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -215,6 +215,9 @@ en:
       invalid_keypair:             'Invalid key pair! Please check the keypair file.'
       modifying:                   'Modifying instance.. updates in 15 seconds.'
       change_scale_warning:        'The instance will be stopped temporarily if the scale changes.'
+      start_rds:                   'Are you sure you want to start DB instance?'
+      stop_rds:                    'Are you sure you want to stop DB instance?'
+      reboot_rds:                  'Are you sure you want to reboot DB instance?'
 
   security_groups:
     title:        'Security Groups'
