--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -214,6 +214,9 @@ ja:
       invalid_keypair:             'キーペアが無効です! キーペアファイルを確認してください。'
       modifying:                   'インスタンスクラスを変更しています... 15 秒おきにステータスが更新されます'
       change_scale_warning:        'スケールを変更すると、インスタンスは一時的に停止されます'
+      start_rds:                   'DB インスタンスを今すぐ開始してよろしいですか?'
+      stop_rds:                    'DB インスタンスを今すぐ停止してよろしいですか?'
+      reboot_rds:                  'DB インスタンスを今すぐ再起動してよろしいですか?'
 
   security_groups:
       title:        'セキュリティグループ'
