--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -183,6 +183,8 @@ ja:
     operations:         'オペレーション'
     monitoring:         'モニタリング'
     logs:               'ログ'
+    starting:           '開始中'
+    stopping:           '停止中'
     btn:
       delete_stack:         'スタックの削除'
       delete_stack_confirm: '実行'
@@ -212,7 +214,7 @@ ja:
       empty-list:                  'インフラストラクチャのリストは空です.'
       loading-list:                'インフラストラクチャのロード中です...'
       invalid_keypair:             'キーペアが無効です! キーペアファイルを確認してください。'
-      modifying:                   'インスタンスを変更しています... 15 秒おきにステータスが更新されます'
+      modifying:                   'インスタンスを %{status} です... 15 秒おきにステータスが更新されます'
       change_scale_warning:        'スケールを変更すると、インスタンスは一時的に停止されます'
       confirm_start_rds:           'DB インスタンスを今すぐ開始してよろしいですか?'
       confirm_stop_rds:            'DB インスタンスを今すぐ停止してよろしいですか?'
