--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -183,8 +183,6 @@ ja:
     operations:         'オペレーション'
     monitoring:         'モニタリング'
     logs:               'ログ'
-    starting:           '開始中'
-    stopping:           '停止中'
     btn:
       delete_stack:         'スタックの削除'
       delete_stack_confirm: '実行'
@@ -214,7 +212,6 @@ ja:
       empty-list:                  'インフラストラクチャのリストは空です.'
       loading-list:                'インフラストラクチャのロード中です...'
       invalid_keypair:             'キーペアが無効です! キーペアファイルを確認してください。'
-      modifying:                   'インスタンスを %{status} です... 15 秒おきにステータスが更新されます'
       change_scale_warning:        'スケールを変更すると、インスタンスは一時的に停止されます'
       confirm_start_rds:           'DB インスタンスを今すぐ開始してよろしいですか?'
       confirm_stop_rds:            'DB インスタンスを今すぐ停止してよろしいですか?'
@@ -222,6 +219,12 @@ ja:
       start_rds:                   'DB インスタンスの起動が開始されました'
       stop_rds:                    'DB インスタンスの停止が開始されました'
       reboot_rds:                  'DB インスタンスの再起動が開始されました'
+
+  rds:
+    msg:
+      starting:     'インスタンスを開始中です... 15 秒おきにステータスが更新されます'
+      stopping:     'インスタンスを停止中です... 15 秒おきにステータスが更新されます'
+      modifying:    'インスタンスクラスを変更中です... 15 秒おきにステータスが更新されます'
 
   security_groups:
       title:        'セキュリティグループ'
