--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -185,6 +185,8 @@ en:
     monitoring:         'Monitoring'
     logs:               'Logs'
     no_resource:        'No resource information.'
+    title:
+      change_keypair:    'Change KeyPair'
     btn:
       delete_stack:         'Delete Stack'
       delete_stack_confirm: 'Execute'
@@ -196,6 +198,7 @@ en:
       template_history:     'CloudFormation Template History'
       stack_eventlog:       'Stack Eventlog'
       infrastructure_log:   'Operation Log'
+      change_keypair:       'Change KeyPair'
     msg:
       created:                     'Infrastructure was successfully created.'
       updated:                     'Infrastructure was successfully updated.'
@@ -222,6 +225,7 @@ en:
       stop_rds:                    'DB instance is stopping.'
       reboot_rds:                  'DB instance is rebooting.'
       no_resource:                 'There are no resources that can be displayed.'
+      change_keypair_warning:    'If change the key pair, you need to manually change the existing EC2::Instance key pair.'
 
   rds:
     msg:
