--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -184,6 +184,8 @@ ja:
     monitoring:         'モニタリング'
     logs:               'ログ'
     no_resource:        '情報なし'
+    title:
+      change_keypair:    '鍵ペアの変更'
     btn:
       delete_stack:         'スタックの削除'
       delete_stack_confirm: '実行'
@@ -195,6 +197,7 @@ ja:
       template_history:     'CloudFormation テンプレートの履歴'
       stack_eventlog:       'スタックのイベント履歴'
       infrastructure_log:   '作業履歴'
+      change_keypair:       '鍵ペアを変更'
     msg:
       created:                     'インフラ情報が正常に追加されました'
       updated:                     'インフラ情報が正常に更新されました'
@@ -221,6 +224,7 @@ ja:
       stop_rds:                    'DB インスタンスの停止が開始されました'
       reboot_rds:                  'DB インスタンスの再起動が開始されました'
       no_resource:                 '表示できるリソースはありません'
+      change_keypair_warning:    '鍵ペアを変更する場合、既存のEC2::Instanceの鍵ペアを手動で変更する必要があります'
 
   rds:
     msg:
