Update: CloudFormationテンプレートでYAMLフォーマットに対応

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -433,6 +433,7 @@ en:
     cf_template:  'CloudFormation Template'
     subject:      'Subject'
     details:      'Details'
+    format:       'format'
     operator:     'Operator'
     parameters:   'Parameters'
     history:      'History'
