Update: 案件関連のページでzabbixなしを選択できるように変更

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,6 +32,7 @@ en:
     please_select: 'Select one'
     not_set:       'Not set'
     selected:      'Selected'
+    none:           'None'
     btn:
       architecture:    'Architecture'
       settings:        'Settings'
