--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -81,6 +81,7 @@ en:
     chef_server:       'Chef Server'
     vpc_id:            'VPC ID'
     subnet_id:         'Subnet ID'
+    skip_zabbix_server: 'Not create Zabbix Server'
 
     msg:
       created:           'SkyHopper was successfully setup'
