--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -178,6 +178,7 @@ ja:
     in_progress:        '実行中...'
     database:           'データベース'
     runlist:            'Runlist'
+    failed_to_get_runlist: 'Runlistの取得に失敗しました'
     instance_type:      'インスタンスの種類'
     add_ec2:            'EC2の追加'
     serverspec_failed:  'Serverspec が失敗しています'
