--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -309,6 +309,9 @@ en:
     recipe:      'Recipe'
     cookbook:    'CookBook'
     role:        'Role'
+    playbook:     'playbook'
+    ansible_role:        'Ansible role'
+    playbook_roles:     'playbook roles'
     statuses:    'Statuses'
     latest_cook_status:       'Latest Cook Status'
     latest_update_status:     'Latest yum command Status'
@@ -316,6 +319,7 @@ en:
     cook_in_why_run_mode:     'Cook(why-run)'
     btn:
       edit_runlist:               'Edit Runlist'
+      edit_playbook:    'Edit playbook'
       apply_dish:                 'Apply Dish'
       bootstrap_with_chef_server: 'Bootstrap with Chef Server'
       instance_settings:          'Settings'
@@ -329,6 +333,7 @@ en:
       changed_scale:      'Change scale to %{type}'
       runlist_updated:    'Runlist was successfully updated.'
       runlist_applying:   'Runlist is being applied...'
+      playbook_updated:    'playbook was successfully updated.'
       cook_started:       'Cook was successfully started'
       should_set_attr:    "Cook wasn't started. You should set the attribute(s)"
       attribute_updated:  'Attribute was successfully updated.'
