--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -309,6 +309,7 @@ ja:
     playbook:     'playbook'
     ansible_role:        'Ansible role'
     playbook_roles:     'playbook roles'
+    extra_vers:          'extra-vers'
     statuses:    '状態'
     latest_cook_status:       'Cook'
     latest_update_status:     'yum'
