--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -306,6 +306,8 @@ ja:
     recipe:      'Recipe'
     cookbook:    'CookBook'
     role:        'Role'
+    ansible:      'Ansible'
+    run_ansible_playbook: 'run ansible-playbook'
     playbook:     'playbook'
     ansible_role:        'Ansible role'
     playbook_roles:     'playbook roles'
@@ -333,6 +335,7 @@ ja:
       runlist_updated:    'Runlist は正常に更新されました'
       runlist_applying:   'Runlist を適用中です...'
       playbook_updated:    'playbook は正常に更新されました'
+      playbook_applying:    'playbook を適用中です...'
       cook_started:       'Cook が正常に開始されました'
       should_set_attr:    "Cook は開始できませんでした。インスタンスの設定を行ってください"
       attribute_updated:  'Attribute が正常に更新されました'
