--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -314,7 +314,7 @@ en:
     playbook:     'playbook'
     ansible_role:        'Ansible role'
     playbook_roles:     'playbook roles'
-    extra_vers:          'extra-vers'
+    extra_vars:          'extra-vars'
     statuses:    'Statuses'
     latest_cook_status:       'Latest Cook Status'
     latest_ansible_status:    'Latest Ansible Status'
