--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -348,6 +348,7 @@ ja:
       yum_update_success: |
           %{physical_id}のYumアップデートが成功しました。 <br>
           この操作のログを表示しますか？
+      not_register_in_known_hosts: known_hostsに鍵が登録されていません。しばらくしてから再度お試しください。
 
 
   dishes:
