Add: Dishの編集画面にplaybookを追加

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -369,6 +369,7 @@ en:
       no_serverspec_selected: 'No serverspecs selected.'
       empty-list:             'No dishes found.'
       delete_dish:            'Are you sure you want to delete this Dish?'
+      save_failed:            'Dish was failed saved.'
 
 
   servertests:
