--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -464,6 +464,7 @@ ja:
       creating:        'スタックの作成を開始しました'
       delete_cf_template: 'このテンプレートを削除してもよろしいですか？'
       confirm_export:  ' 以下の CloudFormation テンプレートをエクスポートします'
+      create_failure:  ' テンプレートの作成に失敗しました'
 
 
   template_builder:
