Fix: ユーザー管理で自分自身を削除しようとしたときにエラーメッセージを追加

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -579,6 +579,7 @@ en:
       use_stop_mfa:          'If save changes, use stop MFA.'
       delete_user:           'Are you sure you want to delete this User?'
       error:                 'An error occured while processing Zabbix: "%{msg}"'
+      cannot_delete_yourself: 'Cannot delete yourself'
 
 
   system_servers:
