--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -576,6 +576,7 @@ ja:
       use_stop_mfa:          '変更を保存すると、MFA の使用を停止します。'
       delete_user:           'このユーザーを削除してもよろしいですか？'
       error:                 'Zabbix 処理中にエラーが発生しました "%{msg}"'
+      cannot_delete_yourself: '自分自身を削除することはできません'
 
 
   system_servers:
