--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -758,6 +758,7 @@ ja:
       secret:    'secret_key_base'
       db_key:    'db_crypt_key'
       db_salt:    'db_crypt_salt'
+      no_compatibility: '互換性を維持しない'
       db_export: 'エクスポートしたZIPファイルには下記のファイルが含まれています。'
       db_import: 'DB をインポートするには下記のファイルを含む ZIP ファイルを指定してください'
       db_import_finish: 'データベースのインポートが完了しました'
