--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -315,6 +315,7 @@ ja:
     latest_serverspec_status: 'Serverspec'
     cook_in_why_run_mode:     'Cook(why-run)'
     btn:
+      register_for_known_hosts:   'known_hostsに登録'
       edit_playbook:              'playbook の編集'
       apply_dish:                 'ディッシュの適用'
       bootstrap_with_chef_server: 'Chef Server に登録'
@@ -664,6 +665,9 @@ ja:
       detach_volume:         '%{physical_id} から %{volume_id} をデタッチします。本当によろしいですか?'
       volume_detached:       '%{volume_id} をデタッチ中です...'
       creating_volume:       'ボリューム <code>%{volume_id}</code> の作成が開始されました'
+      register_for_known_hosts: |
+        known_hostsにリモートサーバの鍵を登録します。
+        既にknown_hostsに鍵が登録されている場合は、削除した後に登録します。
     btn:
       register:   'インスタンスを登録'
       deregister: 'インスタンスの登録を解除'
